fixes to dark mode

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -25,7 +25,11 @@ body.dark {
 	}
 	#bas {
 		color: $color_1;
-	}
+    }
+    
+    h1 a{
+        color: $color_1;
+    }
 }
 
 // -- Put custom style under this point -- //
